# super-octo-system

./: .env-template  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  requirements.txt
scripts/: dash_dashboard.py  dashboard.py  refresh_google_token.py  start_dash_dashboard.sh  start_dashboard.sh
scripts/assets/: calendar-dark.css
src/super_octo_system/: __init__.py  google_calendar.py  information_recipe.py  latest_response_summary.py  met_office.py  public_google_sheet.py  train.py
tests/: test_dash_dashboard.py  test_dashboard.py  test_google_calendar.py  test_integration.py  test_integration_dash.py  test_latest_response_summary.py  test_met_office.py  test_public_google_sheet.py  test_train.py
