[project]
name = "super-octo-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "realmordor", email = "realmordor@github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
