[project]
name = "super-octo-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "realmordor", email = "realmordor@github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.183.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "streamlit-calendar>=1.4.0",
    "streamlit>=1.50.0",
    "zeep>=4.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
